// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> check Input renders properly with default props 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="testname"
  >
    Test label
  </label>
  <input
    className="form-control"
    id="testname"
    key="testname"
    name="testname"
    onChange={[Function]}
  />
</div>
`;

exports[`<Input /> check Input renders properly with error 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="testname"
  >
    Test label
  </label>
  <input
    className="form-control"
    id="testname"
    key="testname"
    name="testname"
    onChange={[Function]}
  />
  <div
    className="alert alert-danger"
  >
    test error
  </div>
</div>
`;

exports[`<Input /> check Input renders properly with matchedInputName provided 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="testname"
  >
    Test label
  </label>
  <input
    className="form-control"
    id="testname"
    key="testname"
    name="testname"
    onChange={[Function]}
  />
</div>
`;

exports[`<Input /> check Input renders properly with value provided 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="testname"
  >
    Test label
  </label>
  <input
    className="form-control"
    id="testname"
    key="testname"
    name="testname"
    onChange={[Function]}
    value="Test value"
  />
</div>
`;
